feat: new `/api/veggies/ids` filter endpoint
